src/objects/Almacen_temporal__c.object
<CustomObject>
    <description>Almacena información de registros eliminados que necesitan ser eliminados en la plataforma de Google. Una vez que son eliminados en Google los registros de este objeto serán eliminados.</description>
    <fields>
        <fullName>Id_externo__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Id externo</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id_propietario_registro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id propietario registro</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_registro__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id registro</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objeto__c</fullName>
        <label>Objeto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tarea</fullName>
                </value>
                <value>
                    <fullName>Evento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Almacen temporal</label>
    <nameField>
        <displayFormat>AT-{0000000}</displayFormat>
        <label>Nombre de Almacen temporal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Almacen temporal</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>